<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Login">
    <ImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:id="@+id/back"
        app:srcCompat="@drawable/ic_arrow_back_blackk_24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:text="@string/app_name"
        android:textSize="@dimen/_22sdp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/toolbarColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/username"
            android:paddingLeft="@dimen/_5sdp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/password"
            android:paddingLeft="@dimen/_5sdp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/login"
            android:textSize="@dimen/_15ssp"
            android:textColor="@android:color/white"
            android:background="@color/toolbarColor"
            android:layout_marginTop="@dimen/_15sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:text="or"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/facebook"
                android:text="@string/loginfacebook"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/donthave"
            android:id="@+id/gotosignup"
            android:gravity="center"
            android:textSize="@dimen/_11ssp"/>
    </LinearLayout>

</LinearLayout>