<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.SignUp">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">
    <ImageView
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/back"
        android:layout_marginLeft="@dimen/_5sdp"
        app:srcCompat="@drawable/ic_arrow_back_blackk_24dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/signup"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center"
            android:weightSum="1">
        <EditText
            android:layout_weight=".5"
            android:layout_width="0dp"
            android:hint="@string/firstname"
            android:textSize="@dimen/_12ssp"
            android:layout_height="@dimen/_35sdp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight=".5"
                android:hint="@string/lastname"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_12ssp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/_12ssp"
            />
        <Spinner
            android:layout_width="match_parent"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/country"
            android:layout_height="@dimen/_43sdp"></Spinner>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:id="@+id/gender"
            ></Spinner>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/toolbarColor"
            android:text="@string/signup"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13ssp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:gravity="center"
            android:textSize="@dimen/_12ssp"
            android:text="or"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/facebook"
                android:text="@string/signupfacebook"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/haveanaccount"
            android:gravity="center"/>
    </LinearLayout>
    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>