<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.shippingAddress">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">
            <include layout="@layout/productbar"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingRight="@dimen/_15sdp"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:gravity="center"
                    android:weightSum="1">
                    <EditText
                        android:layout_weight=".5"
                        android:layout_width="0dp"
                        android:hint="@string/firstname"
                        android:textSize="@dimen/_12ssp"
                        android:layout_height="@dimen/_35sdp" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_weight=".5"
                        android:hint="@string/lastname"
                        android:textSize="@dimen/_12ssp" />
                </LinearLayout>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_12ssp"
                    />
                <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:hint="@string/phone"
                android:inputType="textPassword"
                android:textSize="@dimen/_12ssp"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/Address1"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_12ssp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/Address1"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_12ssp"
                    />
                <Spinner
                    android:layout_width="match_parent"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/country"
                    android:layout_height="@dimen/_43sdp"></Spinner>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_43sdp"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/gender"
                    ></Spinner>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:hint="@string/postalcode"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_12ssp"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:text="@string/next"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:background="#557F5F"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        android:layout_height="@dimen/_40sdp"
        tools:ignore="RtlCompat" />
</RelativeLayout>