<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/toolbarColor"
    android:orientation="vertical"
    android:id="@+id/login"
    android:layout_height="@dimen/_125sdp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp"
        app:cardUseCompatPadding="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/toolbarColor">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@android:color/white"
              android:textSize="@dimen/_18ssp"
              android:layout_gravity="center_vertical"
              android:layout_marginLeft="@dimen/_5sdp"
              android:text="@string/menu"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">
        <ImageView
            android:layout_weight=".25"
            android:layout_width="0dp"
            android:src="@drawable/usericon"
            android:layout_gravity="center_vertical"
            android:layout_height="@dimen/_40sdp" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:weightSum="2"
            android:orientation="vertical">
            <TextView
                android:layout_weight=".8"
                android:layout_width="match_parent"
                android:text="@string/loginandregist"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_height="0dp" />
            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:text="@string/detailsLogin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12ssp"
                android:layout_height="0dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>