<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:openDrawer="start"
    android:background="#E9EEF3"
    android:id="@+id/drawer"
    tools:context=".view.Home">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/scrollView"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:focusableInTouchMode="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/toolbar" />

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:layout_marginBottom="4dp">
            </android.support.v4.view.ViewPager>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="@dimen/_40sdp"
              android:weightSum="1"
              android:layout_marginTop="@dimen/_10sdp"
              android:orientation="horizontal">
              <TextView
                  android:layout_weight="1"
                  android:layout_width="0dp"
                  android:text="@string/DEALs"
                  android:textSize="@dimen/_13ssp"
                  android:paddingLeft="@dimen/_5ssp"
                  android:gravity="center_vertical"
                  android:layout_height="match_parent" />

          </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:id="@+id/dealslist">
            </android.support.v7.widget.RecyclerView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:weightSum="1"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight=".8"
                    android:layout_width="0dp"
                    android:text="@string/lastest"
                    android:textSize="@dimen/_13ssp"
                    android:paddingLeft="@dimen/_5ssp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent" />
                <TextView
                    android:layout_weight=".2"
                    android:layout_width="0dp"
                    android:textColor="@color/toolbarColor"
                    android:gravity="center"
                    android:textSize="@dimen/_13ssp"
                    android:text="@string/viewall"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:id="@+id/latestlist">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        >

        <include
            layout="@layout/navigation"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="match_parent" /></LinearLayout>
</android.support.v4.widget.DrawerLayout>